tests/mm0_mmu/fail/bad-sort1.mmu
(sort s3 strict pure sort)